--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,15 @@
 
 #yellow{
 	background-color: yellow;
-	Border-width: 1px;
+	border: 1px solid green;
 }
 
 #red{
 	background-color:red;
-	Border-width: 1px;
+	border: 1px solid black;
 }
 
 #green{
 	background-color:green;
-	Border-width: 1px;
+	border: 1px solid yellow;
 }
